<resources>
    <string name="app_name">CrudSqlite</string>
    <string name="action_settings">Settings</string>
    <string name="textoSplash">Trabalho de Banco de Dados \n Dayane Lima de Castro Carmonio</string>
    <string name="lbl_nome">Nome</string>
    <string name="lbl_email">E-mail</string>
    <string name="lbl_endereco">Endereço</string>
    <string name="lbl_sexo">Sexo</string>
    <string name="lbl_sexo_feminino">Feminino</string>
    <string name="lbl_sexo_masculino">Masculino</string>
    <string name="aluno">Nome Aluno(a)</string>
</resources>
